syntax = "proto3";

package actors.v1;

// Strategy is used to handle a failed child actor
enum Strategy {
  // STOP means stop the child actor in case of error
  STOP = 0;
  // RESTART means restart the child actor in case of error
  RESTART = 1;
}

// PoisonPill is used to stop an actor
message PoisonPill {}

